@@ -1,3 +1,7 @@
+102
+- Fix rew pattern not working
+- Change logging to use LOGDEBUG
+
 101
 - Fix sleep.png so all LED's turn off
 
